# CNES-Emu

./: CMakeLists.txt  README.md  env-script.sh
include/: bus.hpp  cpu.hpp
src/: bus.cpp  cpu.cpp  debug.cpp  main.cpp
test/: cpu_test.cpp
